--- a/index.html
+++ b/index.html
@@ -6,14 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+
 
     <title>4 Second Assignment</title>
 </head>
 <body>
+
+
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <button
+                class="navbar-toggler"
+                type="button"
+
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarToggleExternalContent2"
+                aria-controls="navbarToggleExternalContent1"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
+            <i class="fas fa-bars text-white"></i>
+        </button>
+        <a class="navbar-brand" href="#">4 Second Assignment</a>
+    </div>
+</nav>
+<div class="collapse" id="navbarToggleExternalContent2">
+    <ul class="bg-light shadow-3 py-2 px-3">
+        <li class="btn btn-link btn-block m-0 p-2 text-start text-dark">home</li>
+        <li class="btn btn-link btn-block m-0 p-2 text-start text-dark">Features</li>
+        <li class="btn btn-link btn-block m-0 p-2 text-start text-dark">Pricing</li>
+    </ul>
+</div>
+
 
 <div class="container">
     <div class="row">
@@ -21,7 +50,7 @@
             &nbsp;
         </div>
         <div class="col-sm text-center">
-            <h1>4 Second Assignment</h1>
+            &nbsp;
         </div>
         <div class="col-sm">
             &nbsp;
@@ -32,6 +61,11 @@
         </div>
         <div class="col-sm text-center">
             <button id="btnTimer" type="button" class="btn btn-outline-dark btn-lg">Start</button>
+
+            <button type="button" class="btn btn-secondary"
+                    id="toastbtn">
+                <i class="fa fa-info" aria-hidden="true"></i>
+            </button>
         </div>
         <div class="col-sm">
             &nbsp;
@@ -53,14 +87,54 @@
                 &nbsp;
             </div>
             <div class="col-sm text-center">
-                <p id="starting"></p>
-                <p id="ending"></p>
+
             </div>
             <div class="col-sm">
                 &nbsp;
             </div>
         </div>
 </div>
+
+
+
+
+    <div class="toast">
+        <div class="toast-header">
+            <strong class="me-auto">
+                Summary Info
+            </strong>
+
+            <button type="button" class="btn-close"
+                    data-bs-dismiss="toast">
+            </button>
+        </div>
+
+        <div class="toast-body">
+            <p>
+                Attempt:
+            </p>
+            <p id="attempts"></p>
+            <p>
+                Start:
+            </p>
+            <p id="starting"></p>
+            <p> End:</p>
+            <p id="ending"></p>
+        </div>
+    </div>
+</div>
+
+<script>
+    document.getElementById("toastbtn")
+        .onclick = function () {
+        var toastElList = [].slice
+            .call(document.querySelectorAll('.toast'));
+        var toastList = toastElList.map(function (toastEl) {
+            return new bootstrap.Toast(toastEl)
+        })
+        toastList.forEach(toast => toast.show())
+    }
+</script>
 
 
 <script>
@@ -77,6 +151,9 @@
     var newColor;
     var info =  [];
     var tries = 0;
+    var timesTried = document.getElementById("attempts");
+
+
     function clicked() {
         timesClicked += 1;
         if (timesClicked % 2 == 0) {
@@ -116,27 +193,28 @@
 
 
             info.push(user);
+
+            attempts
             timeLogStart.innerText = info[tries-1].start;
             timeLogEnd.innerText = info[tries-1].stop;
+            timesTried.innerText = tries;
+
+
+
 
         } else {
             startDate = new Date();
             btn.innerHTML = "Stop";
             //startOrStop.classList.replace("fa-play", "fa-stop");
+
         }
     }
 
-
-
-
-
-
 </script>
 
-<!-- Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
