--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 <div class="collapse" id="navbarToggleExternalContent2">
     <ul class="bg-light shadow-3 py-2 px-3">
         <li class="btn btn-link btn-block m-0 p-2 text-start text-dark">home</li>
-        <li class="btn btn-link btn-block m-0 p-2 text-start text-dark">Features</li>
-        <li class="btn btn-link btn-block m-0 p-2 text-start text-dark">Pricing</li>
+        <li class="btn btn-link btn-block m-0 p-2 text-start text-dark">chart</li>
     </ul>
 </div>
 
