--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -29,7 +28,7 @@
                 <a class="nav-link" href="#howTo">how to</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#/services">scores</a>
+                <a class="nav-link" href="#chart">scores</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#/career"></a>
@@ -73,7 +72,7 @@
 
 <div class="container">
     <div class="row">
-   </div>
+    </div>
     <div class="row pb-5 pt-5">
         <div class="col-sm">
             &nbsp;
@@ -83,7 +82,8 @@
         </div>
         <div class="col-sm">
             &nbsp;
-        </div>    </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm">
             &nbsp;
@@ -141,7 +141,8 @@
             </div>
             <div class="col-sm">
                 &nbsp;
-            </div>    </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-sm">
                 &nbsp;
@@ -195,24 +196,93 @@
                 </div>
                 <div class="col-sm">
                     &nbsp;
-                </div>    </div>
-            <div class="row pb-5"></div>
+                </div>
+            </div>
+            <div class="row pb-3"></div>
         </div>
+        <div class="row text-center">
+            <div class="col-sm">
+                &nbsp;
+            </div>
+            <div class="col-sm">
+                <h1>scores</h1>
+            </div>
+            <div class="col-sm">
+                &nbsp;
+            </div>
+        <div class="row">
+            <div class="col-2">
+                &nbsp;
+            </div>
+            <div class="col-8">
+                <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+            </div>
+            <div class="col-2">
+                &nbsp;&nbsp;
+            </div>
+        </div>
+            <div class="row"></div>
+            <div class="col-2">
+                &nbsp;
+            </div>
+            <div class="col-2" id="chart">
+                &nbsp;
+            </div>
+            <div class="col-2">
+                &nbsp;
+            </div>
+    </div>
     </div>
 
 
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+    </script>
+
+    <script src="/src/toast.js"></script>
+    <script src="/src/index.js"></script>
 
 
-        <script src="/src/toast.js"></script>
-        <script src="/src/index.js"></script>
+
+<script>
+
+    function uncharted(){
+    var xyValues = [];
+
+    for (var i=0; i<allScores.length; i++) {
+        xyValues.push({x: (i+1), y: allScores[i]});
+    }
+
+    new Chart("myChart", {
+        type: "scatter",
+        data: {
+            datasets: [{
+                pointRadius: 4,
+                pointBackgroundColor: "rgb(0,0,255)",
+                data: xyValues
+            }]
+        },
+        options: {
+            legend: {display: false},
+            scales: {
+                xAxes: [{ticks: {min: 0, max:25}}],
+                yAxes: [{ticks: {min: 0, max:16}}],
+            }
+        }
+    });}
+</script>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-                integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-                crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-                integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-                crossorigin="anonymous"></script>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
 
 
 </body>
