--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -29,6 +29,12 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#chart">scores</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#/career"></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#/contact"></a>
             </li>
         </ul>
     </div>
@@ -229,18 +235,18 @@
     </div>
 
 
-    <script
+    <script type="text/javascript" charset="utf-8"
             src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
     </script>
 
-    <script src="/src/toast.js"></script>
-    <script src="/src/index.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/toast.js"></script>
+    <script type="text/javascript" charset="utf-8"  src="js/index.js"></script>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    <script type="text/javascript" charset="utf-8" src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
             integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
             crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    <script type="text/javascript" charset="utf-8"  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous"></script>
 
